--- a/works.html
+++ b/works.html
@@ -55,7 +55,7 @@
 			
 			<div class="box">
                 <div class="box-content">
-					<img src="assets/moonmural.jpg" alt="Moon Mural for Lunexii Collection">
+					<img src="assets/MoonMural.jpg" alt="Moon Mural for Lunexii Collection">
                    <p>Moon Mural for Lunexii Collection</p>
 				   <p style= "font-size: 13px"><em>(Located in Fort Lauderdale by Sunrise Blvd & US-1)</em></p>
                 </div>
